gccida/c0/expand_builtin_memcmp
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2711:65: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_builtin_memcmp( tree exp, tree arglist, rtx target, machine_mode mode) 
                                                                ^
                                                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2716:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2718:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2719:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2720:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2721:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2722:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2734:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // [rsp+98h] [rbp-118h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2735:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // [rsp+A8h] [rbp-108h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode insn_mode; // [rsp+ECh] [rbp-C4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2744:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+120h] [rbp-90h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2747:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *cst_uchar_ptr_node; // [rsp+138h] [rbp-78h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2748:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *cst_uchar_node; // [rsp+140h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2752:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *len; // [rsp+160h] [rbp-50h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2753:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg2; // [rsp+168h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2754:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg1; // [rsp+170h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2803:37: error: use of undeclared identifier 'insn_data_0'
insn_mode = *( ( unsigned __int16 *)insn_data_0[1203].operand + 8); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/builtins.c:2837:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)arg1_rtx->fld[0]; 
                       ^~~~~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_builtin_memcmp/src/obj/builtins.o] Error 1
